tests/failing/callback_hell.db
addEventListener("click", (e) => {
    requestAnimationFrame(() => {
        print("You clicked on the page
        
        // This is fine